Fixed ballot box image spacing issue on certain sizes

--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,7 @@ h4 {
 @media screen and (max-width: 1386px) {
   #about-section {
     max-width: 100%;
+    margin-top: 76px !important;
     width: 400px !important;
   }
 }
